--- a/mywebsite/src/HomePage/assets/css/home.css
+++ b/mywebsite/src/HomePage/assets/css/home.css
@@ -16,7 +16,7 @@
     align-items: center;
     padding: 100px 0;
 }
-.home-page p {
+.home-page p, figcaption {
     color: var(--p);
 }
 .home-page h1, h2 {
