--- a/mywebsite/src/ProjectsPage/assets/css/sections/headersection.css
+++ b/mywebsite/src/ProjectsPage/assets/css/sections/headersection.css
@@ -1,7 +1,7 @@
 .header-section {
     width: 80vw;
     max-width: 1000px;
-    padding: 100px 0;
+    padding: 100px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,7 +44,7 @@
 
 @media (max-width: 600px){
     .header-section {
-        min-width: 350px;
+        min-width: 330px;
     }
     .header-section__content {
         padding: 0 10px;
