--- a/mywebsite/src/assets/css/main.css
+++ b/mywebsite/src/assets/css/main.css
@@ -17,15 +17,15 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 30px;
 }
 h2 {
     font-size: 20px;
 }
 
-p, a, figcaption {
+p, a, figcaption, ul {
     font-family: 'Inter-Regular';
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
 }
 
