--- a/mywebsite/src/assets/css/main.css
+++ b/mywebsite/src/assets/css/main.css
@@ -23,7 +23,7 @@ h2 {
     font-size: 20px;
 }
 
-p, a, figcaption, ul {
+p, a, figcaption, ul, li {
     font-family: 'Inter-Regular';
     font-size: 16px;
     margin: 0;
@@ -36,7 +36,7 @@ p, a, figcaption, ul {
     h2 {
         font-size: 16px;
     }
-    p, a {
+    p, a, ul, li {
         font-size: 14px;
     }
 }
