--- a/mywebsite/src/HomePage/assets/css/sections/projectsection.css
+++ b/mywebsite/src/HomePage/assets/css/sections/projectsection.css
@@ -45,10 +45,19 @@
     overflow-y: hidden;
     text-overflow: ellipsis;
 }
-.project-section__content__project__video, .project-section__content__project__image {
+.project-section__content__project__video {
     width: 325px;
     aspect-ratio: 16 / 9;
     align-self: center;
+}
+.project-section__content__project__description .default-view {
+    max-height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.project-section__content__project__description .default-view img {
+    max-height: 200px;
 }
 .project-section__content__project__tags{
     display: flex;
