--- a/mywebsite/src/assets/css/ReusableComponents/sidemenu.css
+++ b/mywebsite/src/assets/css/ReusableComponents/sidemenu.css
@@ -8,8 +8,6 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    top: 25px;
-    left: 25px;
 }
 
 .side-menu-content{
@@ -76,9 +74,10 @@
         padding: 5vh 5vw;
         overflow-y: scroll;
         left: 0;
+        border-radius: 0;
     }
     .side-menu-button-control{
-        top: 10px;
+        top: 8px;
         left: 10px;
     }
     .side-menu-content__item h2{
