--- a/portfolio/src/styles/global.css
+++ b/portfolio/src/styles/global.css
@@ -64,32 +64,48 @@
     body {
         @apply bg-primary min-w-xs; /* min-w-xs 20rem 320px*/
     }
+
+    section {
+        @apply w-full max-w-[90rem] px-6;
+    }
 }
 @layer components {
-    .page {
-        @apply my-[6rem] mx-auto flex flex-col gap-[3rem];
-    }
     .interact {
         @apply hover:shadow-md hover:shadow-enhanced hover:drop-shadow-md
             hover:text-enhanced
             hover:opacity-80
-            hover:-translate-y-1 transition-all duration-500 ease-in-out;
+            hover:-translate-y-1 transition-all duration-300 ease-in-out;
     }
     .card {
-        @apply bg-secondary shadow-xl rounded-[3rem] gap-6 py-6 px-10
-            flex flex-col justify-between items-center;
+        @apply flex flex-col justify-between items-center;
     }
     
+    .transition-slow {
+        @apply transition-all duration-300 ease-in-out;
+    }
 }
 @layer utilities {
-    .w-main {
-        @apply w-full max-w-[40rem] sm:max-w-[64rem];
+    .card-large {
+        @apply w-full max-w-[40rem] sm:max-w-[64rem] shadow-xl rounded-[3rem] gap-6 py-6 px-10;
     }
-    .w-card {
-        @apply w-full max-w-[35rem] sm:max-w-[56rem];
+    .card-medium {
+        @apply w-full max-w-[35rem] sm:max-w-[56rem] shadow-lg rounded-[3rem] gap-4 py-4 px-6;
     }
-    .w-card-sm {
-        @apply w-full max-w-[26rem];
+    .card-small {
+        @apply w-full max-w-[26rem] shadow-md rounded-[3rem] gap-2 py-2 px-3;
+    }
+    .card-fit {
+        @apply w-fit shadow-md rounded-[0.5rem] gap-2 py-2 px-3;
+    }
+
+    .image-large {
+        @apply h-[12rem];
+    }
+    .image-medium {
+        @apply h-[6rem];
+    }
+    .image-small {
+        @apply h-[2.25rem] object-fill;
     }
 
     .size-media {
