--- a/portfolio/src/components/organisms/NavBar/NavBar.css
+++ b/portfolio/src/components/organisms/NavBar/NavBar.css
@@ -1,9 +1,9 @@
-nav h2 {
+.navbar nav h2 {
     position: relative;
     cursor: pointer;
 }
 
-nav h2::after {
+.navbar nav h2::after {
     content: '';
     position: absolute;
     left: 0;
@@ -15,7 +15,7 @@ nav h2::after {
     transition: transform 0.3s;
 }
 
-nav h2:hover::after,
-nav h2.current::after {
+.navbar nav h2:hover::after,
+.navbar nav h2.current::after {
     transform: scaleX(1);
 }
